--- a/client/src/components/navBar/navBar.scss
+++ b/client/src/components/navBar/navBar.scss
@@ -7,7 +7,7 @@
   border-bottom: 1px solid lightgray;
   position: sticky;
   top: 0;
-  // z-index: 1;
+  background-color: #fff;
 
   .left {
     display: flex;
