--- a/client/src/components/rightBar/rightBar.scss
+++ b/client/src/components/rightBar/rightBar.scss
@@ -1,4 +1,10 @@
 .rightBar {
   flex: 3;
-  //   z-index: -1;
+  position: sticky;
+  top: 70px;
+  height: calc(100vh - 70px);
+  overflow: scroll;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
