--- a/client/src/components/leftBar/leftBar.scss
+++ b/client/src/components/leftBar/leftBar.scss
@@ -4,11 +4,12 @@
   top: 70px;
   height: calc(100vh - 70px);
   overflow: hidden;
+  background-color: white;
 
   &:hover {
     overflow-y: scroll;
     &::-webkit-scrollbar {
-      width: 10px;
+      width: 7px;
       background-color: lightgray;
     }
     &::-webkit-scrollbar-thumb {
