--- a/client/src/components/navBar/navBar.scss
+++ b/client/src/components/navBar/navBar.scss
@@ -4,10 +4,8 @@
   justify-content: space-between;
   padding: 10px 20px;
   height: 50px;
-  border-bottom: 1px solid lightgray;
   position: sticky;
   top: 0;
-  background-color: #fff;
 
   .left {
     display: flex;
@@ -17,14 +15,12 @@
     span {
       font-weight: bold;
       font-size: 20px;
-      color: darkblue;
     }
 
     .search {
       display: flex;
       align-items: center;
       gap: 10px;
-      border: 1px solid lightgray;
       padding: 5px;
       border-radius: 5px;
 
@@ -32,6 +28,7 @@
         border: none;
         width: 500px;
         outline: 0;
+        background-color: transparent;
       }
     }
   }
@@ -54,8 +51,8 @@
         object-fit: cover;
       }
 
-      span {
-      }
+      // span {
+      // }
     }
   }
 }
