--- a/client/src/themes/rightBarMix.scss
+++ b/client/src/themes/rightBarMix.scss
@@ -57,14 +57,11 @@
     color: $dark-textColor;
 
     &:hover {
-      overflow-y: scroll;
       &::-webkit-scrollbar {
-        width: 7px;
-        background-color: lightgray;
+        background-color: rgb(158, 154, 154);
       }
       &::-webkit-scrollbar-thumb {
-        border-radius: 20px;
-        background-color: darkgray;
+        background-color: rgb(121, 119, 119);
       }
     }
     .container {
