--- a/client/src/components/rightBar/rightBar.scss
+++ b/client/src/components/rightBar/rightBar.scss
@@ -29,6 +29,7 @@
       -moz-box-shadow: 0px 1px 8px 3px rgba(0, 0, 0, 0.75);
       padding: 20px;
       margin-bottom: 20px;
+      border-radius: 10px;
 
       span {
       }
