added mobile responsiveness

--- a/client/src/components/leftBar/leftBar.scss
+++ b/client/src/components/leftBar/leftBar.scss
@@ -1,9 +1,15 @@
+@import "../../responsive.scss";
+
 .leftBar {
   flex: 2;
   position: sticky;
   top: 70px;
   height: calc(100vh - 70px);
   overflow: hidden;
+
+  @include mobile {
+    display: none;
+  }
 
   &:hover {
     overflow-y: scroll;
