--- a/client/src/components/stories/stories.scss
+++ b/client/src/components/stories/stories.scss
@@ -1,13 +1,30 @@
+@import "../../responsive.scss";
 .stories {
   display: flex;
   gap: 10px;
   height: 250px;
   margin-bottom: 30px;
+  align-items: center;
+  width: 100%;
+  @include mobile {
+    height: max-content;
+    width: 100%;
+    align-items: center;
+  }
+
   .story {
     flex: 1;
     border-radius: 10px;
     overflow: hidden;
     position: relative;
+    height: 170px;
+
+    @include mobile {
+      border-radius: 50%;
+      height: 70px;
+      width: 70px;
+    }
+
     img {
       width: 100%;
       height: 100%;
@@ -19,6 +36,9 @@
       left: 10px;
       color: white;
       font-weight: 500;
+      @include mobile {
+        display: none;
+      }
     }
     button {
       position: absolute;
@@ -35,6 +55,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      // @include mobile {
+      //   left: 45px;
+      // }
     }
   }
 }
