--- a/client/src/pages/profile/profile.scss
+++ b/client/src/pages/profile/profile.scss
@@ -1,4 +1,9 @@
+@import "../../responsive.scss";
+
 .profile {
+  @include mobile {
+    width: 100vw;
+  }
   .images {
     width: 100%;
     height: 300px;
@@ -25,6 +30,12 @@
   .profileContainer {
     margin: 20px 70px;
 
+    @include mobile {
+      margin-top: 130px !important;
+      margin-left: 20px !important;
+      margin-right: 20px !important;
+    }
+
     .uInfo {
       height: 180px;
       box-shadow: 0px 1px 8px 3px rgba(0, 0, 0, 0.75);
@@ -36,12 +47,20 @@
       align-items: center;
       justify-content: space-between;
       margin-bottom: 20px;
+      @include mobile {
+        flex-direction: column;
+        padding: 30px;
+        gap: 8px;
+      }
 
       .left {
         flex: 3.3;
         display: flex;
         gap: 10px;
         align-items: center;
+        // @include mobile {
+        //   display: none;
+        // }
 
         a {
         }
@@ -64,6 +83,9 @@
           align-items: center;
           justify-content: space-around;
           width: 100%;
+          @include mobile {
+            gap: 20px;
+          }
 
           .item {
             display: flex;
