--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -4,7 +4,10 @@
   padding: 20px 70px;
 
   @include mobile {
-    padding: 20px 20px;
+    padding: 20px;
     overflow-x: hidden;
+  }
+  @include smallScreen {
+    padding: 20px;
   }
 }
