--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -6,8 +6,9 @@
   -moz-box-shadow: 0px 1px 8px 3px rgba(0, 0, 0, 0.75);
   border-radius: 20px;
   @include mobile {
-    width: 90%;
+    width: 100%;
     align-self: center;
+    border-radius: none;
   }
 
   .container {
